# modcraft

./: CHANGELOG.md  LICENSE  ORIGINAL_LICENCE  README-CircuitCraft.md  README.md  eulerian_example.py  make_eulerian  pyproject.toml  setup.py
docs/: index.md
docs/api/: circuit_board.md  index.md
docs/concepts/: circuit_architecture.md  economic_motivation.md  eulerian_circuits.md  index.md  lifecycle_flags.md
docs/examples/: eulerian_circuit_check.md  index.md
docs/workflow/: index.md
examples/: README.md  five_step_circuit.pkl  individual_edges.py  lifecycle_flags_example.py  math_circuit.py  math_graph.py  quick_circuit.py  quick_workflow.py  separate_solvers.py  workflow_steps.py
src/circuitcraft/: __init__.py  circuit_board.py  component.py  eulerian.py  graph.py  mover.py  node.py  operations.py  perch.py
src/graphcraft/: graph.py  node.py
tests/: conftest.py
tests/integration/: test_integration.py
tests/unit/: test_graph.py  test_node.py
