[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphcraft"
version = "0.1.0"
authors = [
    { name = "Michael Halls-Moore", email = "mike@quarkgluon.com" },
]
description = "GraphCraft provides a DAG-based computation framework for arbitrary callables."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
	"networkx>=3.4.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
examples = [
    "numpy>=2.2.0"
]

[project.urls]
"Homepage" = "https://github.com/mhallsmoore/graphcraft"
"Bug Tracker" = "https://github.com/mhallsmoore/graphcraft"

[tool.hatch.build.targets.wheel]
packages = ["src/graphcraft"]
