[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "circuitcraft"
version = "1.0.0"
authors = [
    { name = "Akshay Shanker", email = "akshay.shanker@me.com" },
    { name = "Michael Halls-Moore", email = "mike@quarkgluon.com" },
]
description = "CircuitCraft provides a framework for computational graphs focused on economic modeling."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
	"networkx>=3.4.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
examples = [
    "numpy>=2.2.0"
]

[project.urls]
"Homepage" = "https://github.com/akshayshanker/circuitcraft"
"Bug Tracker" = "https://github.com/akshayshanker/circuitcraft"

[tool.hatch.build.targets.wheel]
packages = ["src/circuitcraft"]
